--- a/work/planning-and-urban-design-website.html
+++ b/work/planning-and-urban-design-website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 19 2021 22:54:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Nov 19 2021 23:06:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a57cdc01f0f751ac5877b" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -57,9 +57,6 @@
         </div>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
           <h5>IA/User Flow</h5><img src="../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png 2498w" alt="" class="image-2">
-          <h5>Client&#x27;s Website Ideas/Mockups</h5><img src="../images/PUD-Client-Mockups.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/PUD-Client-Mockups.jpg 500w, ../images/PUD-Client-Mockups.jpg 800w, ../images/PUD-Client-Mockups.jpg 1080w, ../images/PUD-Client-Mockups.jpg 1600w, ../images/PUD-Client-Mockups.jpg 2000w, ../images/PUD-Client-Mockups.jpg 2600w, ../images/PUD-Client-Mockups.jpg 3200w, ../images/PUD-Client-Mockups.jpg 3584w" alt="" class="image-2">
-          <h5>UI / Iterative Process</h5><img src="../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png 3806w" alt="" class="image-2">
-          <h5>Final UI Mockups</h5><img src="../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png 1992w" alt="" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -71,7 +68,15 @@
       "height": 1402,
       "fileSize": 587499,
       "url": "../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png"
-    },
+    }
+  ],
+  "group": "PUD"
+}</script>
+        </a>
+        <a href="#" class="lightbox-link w-inline-block w-lightbox">
+          <h5>Client&#x27;s Website Ideas/Mockups</h5><img src="../images/PUD-Client-Mockups.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/PUD-Client-Mockups.jpg 500w, ../images/PUD-Client-Mockups.jpg 800w, ../images/PUD-Client-Mockups.jpg 1080w, ../images/PUD-Client-Mockups.jpg 1600w, ../images/PUD-Client-Mockups.jpg 2000w, ../images/PUD-Client-Mockups.jpg 2600w, ../images/PUD-Client-Mockups.jpg 3200w, ../images/PUD-Client-Mockups.jpg 3584w" alt="" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
     {
       "width": 3584,
       "caption": "",
@@ -82,7 +87,15 @@
       "_id": "619829b76e036a8121248715",
       "type": "image",
       "fileSize": 456700
-    },
+    }
+  ],
+  "group": "PUD"
+}</script>
+        </a>
+        <a href="#" class="lightbox-link w-inline-block w-lightbox">
+          <h5>UI / Iterative Process</h5><img src="../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png 3806w" alt="" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
     {
       "width": 3806,
       "caption": "",
@@ -93,7 +106,15 @@
       "_id": "614a5a3b447f92325d5d26d9",
       "type": "image",
       "fileSize": 3450345
-    },
+    }
+  ],
+  "group": "PUD"
+}</script>
+        </a>
+        <a href="#" class="lightbox-link w-inline-block w-lightbox">
+          <h5>Final UI Mockups</h5><img src="../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png 1992w" alt="" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
     {
       "width": 1992,
       "caption": "",
@@ -105,7 +126,8 @@
       "type": "image",
       "fileSize": 2183815
     }
-  ]
+  ],
+  "group": "PUD"
 }</script>
         </a>
       </div>
