--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 19 2021 22:54:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 05:42:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -100,17 +100,17 @@
             <h4 class="work-heading">Style Guide</h4>
             <p class="paragraph-2">City of Dallas</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="http://dallasbond.com" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/dallas-bond-website-design.html" class="work-link-block worklinkblock2col w-inline-block">
         <div class="work1 work-dallas-bond"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">UI Design</h4>
             <p class="paragraph-2">Dallas Bond Program</p>
           </div>
-          <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/mood-board-concepts-for-the-future-dallas-dot-gov.html" class="work-link-block w-inline-block">
@@ -120,7 +120,7 @@
             <h4 class="work-heading">Mood Boards</h4>
             <p class="paragraph-2">Concepts for Dallas.gov</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/lose-yourself-logo-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -130,7 +130,7 @@
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">Lose Yourself Hair Studio</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="http://mydallasideas.com" target="_blank" class="work-link-block w-inline-block">
@@ -150,7 +150,7 @@
             <h4 class="work-heading">UI Design</h4>
             <p class="paragraph-2">Planning &amp; Urban Design</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/mimis-nail-creations-logo-design.html" class="work-link-block w-inline-block">
@@ -160,7 +160,7 @@
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">Mimi&#x27;s Nail Creations</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="http://peakenergytech.com" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
@@ -200,7 +200,7 @@
             <h4 class="work-heading">Tablecloth Design</h4>
             <p class="paragraph-2">City of Dallas Information and Technology Services</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="https://dallascityhall.com/government/AnnualReport/Pages/default.aspx" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
@@ -220,7 +220,7 @@
             <h4 class="work-heading">UX/UI Design</h4>
             <p class="paragraph-2">Resilient Dallas</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/responsive-city-of-dallas-website-framework.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -230,7 +230,7 @@
             <h4 class="work-heading">Responsive Design</h4>
             <p class="paragraph-2">City of Dallas (framework)</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/highway-west-vacations-responsive-html-email.html" class="work-link-block w-inline-block">
@@ -240,7 +240,7 @@
             <h4 class="work-heading">Responsive HTML Email Design &amp; Development</h4>
             <p class="paragraph-2">Highway West Vacations</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/city-of-dallas-financial-transparency-website.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -250,7 +250,7 @@
             <h4 class="work-heading">UX/UI Design</h4>
             <p class="paragraph-2">City of Dallas Financial Transparency</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/child-perfume-package-design.html" class="work-link-block w-inline-block">
@@ -260,7 +260,7 @@
             <h4 class="work-heading">Package Design</h4>
             <p class="paragraph-2">Child Perfume</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/la-creme-box-art-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -270,7 +270,7 @@
             <h4 class="work-heading">Package Design</h4>
             <p class="paragraph-2">La Creme</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/alpha-omega-social-media-logo-design.html" class="work-link-block w-inline-block">
@@ -280,7 +280,7 @@
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">Alpha Omega Social Media</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/the-presidio-business-card-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -290,7 +290,7 @@
             <h4 class="work-heading">Business Card Design</h4>
             <p class="paragraph-2">The Presidio</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/la-creme-tag-design.html" class="work-link-block w-inline-block">
@@ -300,7 +300,7 @@
             <h4 class="work-heading">Tag Design</h4>
             <p class="paragraph-2">La Creme</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/oasis-logo-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -310,7 +310,7 @@
             <h4 class="work-heading">Logo Design</h4>
             <p class="paragraph-2">Oasis</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/the-legends-at-indian-springs-brochure-design.html" class="work-link-block w-inline-block">
@@ -320,7 +320,7 @@
             <h4 class="work-heading">Brochure Design</h4>
             <p class="paragraph-2">The Legends at Indian Springs</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/la-creme-truck-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -330,7 +330,7 @@
             <h4 class="work-heading">Truck Design</h4>
             <p class="paragraph-2">La Creme / DeCoty</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/trilan-solutions-business-card-design.html" class="work-link-block w-inline-block">
@@ -340,7 +340,7 @@
             <h4 class="work-heading">Business Card Design</h4>
             <p class="paragraph-2">Trilan Solutions</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/jefferson-at-dedham-station-brochure-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -350,7 +350,7 @@
             <h4 class="work-heading">Brochure Design</h4>
             <p class="paragraph-2">Jefferson at Dedham Station</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/brinks-monitronics-t-shirt-designs.html" class="work-link-block w-inline-block">
@@ -360,7 +360,7 @@
             <h4 class="work-heading">T-Shirt Design</h4>
             <p class="paragraph-2">Brinks/Monitronics (concepts)</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/the-bearded-bandito-label-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -370,7 +370,7 @@
             <h4 class="work-heading">Label Design</h4>
             <p class="paragraph-2">The Bearded Bandito</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/jpt-graphics-car-wrap-design.html" class="work-link-block w-inline-block">
@@ -380,7 +380,7 @@
             <h4 class="work-heading">Car Wrap Design</h4>
             <p class="paragraph-2">JPT Graphics</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
       <a href="work/alderwood-heights-brochure-design.html" class="work-link-block worklinkblock2col w-inline-block">
@@ -390,7 +390,7 @@
             <h4 class="work-heading">Logo &amp; Brochure Design</h4>
             <p class="paragraph-2">Alderwood Heights</p>
           </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
     </div>
