--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Feb 29 2024 17:24:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 29 2024 19:41:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -42,27 +42,8 @@
     </div>
   </div>
   <div id="aboutv" class="intro-section">
-    <div id="w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c93-0a720657" class="w-layout-layout quick-stack-2 wf-layout-layout">
-      <div id="w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c94-0a720657" class="w-layout-cell">
-        <p class="hero-text">Understand</p>
-      </div>
-      <div id="w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c95-0a720657" class="w-layout-cell cell-3">
-        <p class="hero-text">Create</p>
-      </div>
-      <div id="w-node-dcbf95eb-3a97-d9db-142e-10cac3cc1046-0a720657" class="w-layout-cell">
-        <p class="hero-text">Design</p>
-      </div>
-      <div id="w-node-b68808fc-2105-084c-dfaf-50cb34659efb-0a720657" class="w-layout-cell cell-3">
-        <p class="hero-text">Deliver</p>
-      </div>
-      <div id="w-node-d720cf02-8dc4-7b6a-49c6-d1e164731c0a-0a720657" class="w-layout-cell">
-        <p class="hero-text">Solutions</p>
-      </div>
-      <div id="w-node-_67953164-5bbb-8a19-b595-37dbafa2f199-0a720657" class="w-layout-cell">
-        <p class="hero-text-placeholder">.</p>
-      </div>
-    </div>
     <div class="intro-div">
+      <p class="hero-text">Understand. Create. Design. Solutions.</p>
       <div class="about-div">
         <p class="subtitle">UX/UI Designer with a focus in visual design &amp; front end development</p>
         <p class="intro-paragraph">Over 15 years of combined experience in graphic design, web design and front end development. Goal is to improve UI/UX through various methods e.g. research, collaboration, problem solving, wire framing, prototyping and more. Great interest in accepting feedback and using it to build better experiences for users.</p>
