--- a/work/dallas-city-hall-menu-redesign.html
+++ b/work/dallas-city-hall-menu-redesign.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 06 2023 23:40:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 29 2024 19:41:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61a8fe808eb9151a5dd9a566" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
@@ -27,7 +27,6 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="../index.html" class="nav-link w-nav-link">Home</a>
-        <a href="http://vanessasalinas.com/index.html#aboutv" class="nav-link w-nav-link">About</a>
         <a href="http://vanessasalinas.com/index.html#vwork" class="nav-link w-nav-link">Work</a>
         <a href="http://vanessasalinas.com/index.html#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
@@ -65,8 +64,8 @@
   </div>
   <div id="Footer" class="footer">
     <div class="footer-div">
-      <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
+      <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="100vw" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
