--- a/work/oem-website-redesign.html
+++ b/work/oem-website-redesign.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 06 2023 23:40:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 29 2024 19:41:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="657103b3967aa0e9f1295a01" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","League Gothic:regular","Figtree:regular,500,600,700,800","Signika:regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
@@ -27,7 +27,6 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="../index.html" class="nav-link w-nav-link">Home</a>
-        <a href="http://vanessasalinas.com/index.html#aboutv" class="nav-link w-nav-link">About</a>
         <a href="http://vanessasalinas.com/index.html#vwork" class="nav-link w-nav-link">Work</a>
         <a href="http://vanessasalinas.com/index.html#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
@@ -45,9 +44,9 @@
       </div>
       <div class="resources-div">
         <div id="w-node-cfa1d536-a4cc-e5a8-e64f-7905b71a799b-f1295a01" class="w-layout-layout wf-layout-layout">
-          <div class="w-layout-cell"><img src="../images/OEM-2015.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/OEM-2015.png 500w, ../images/OEM-2015.png 800w, ../images/OEM-2015.png 1029w" alt="A preview of how to read the document provided from the client" class="image-2"></div>
-          <div class="w-layout-cell"><img src="../images/OEM-Wireframe.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/OEM-Wireframe.png 500w, ../images/OEM-Wireframe.png 800w, ../images/OEM-Wireframe.png 1080w, ../images/OEM-Wireframe.png 1359w" alt="A preview of the first goal initiatives, actions and resources" class="image-2"></div>
-        </div><img src="../images/OEM-UI.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/OEM-UI.png 500w, ../images/OEM-UI.png 800w, ../images/OEM-UI.png 1080w, ../images/OEM-UI.png 1600w, ../images/OEM-UI.png 2000w, ../images/OEM-UI.png 2223w" alt="A mockup of the final landing page" class="image-2">
+          <div class="w-layout-cell"><img src="../images/OEM-2015.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/OEM-2015-p-500.png 500w, ../images/OEM-2015-p-800.png 800w, ../images/OEM-2015.png 1029w" alt="A preview of how to read the document provided from the client" class="image-2"></div>
+          <div class="w-layout-cell"><img src="../images/OEM-Wireframe.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/OEM-Wireframe-p-500.png 500w, ../images/OEM-Wireframe-p-800.png 800w, ../images/OEM-Wireframe-p-1080.png 1080w, ../images/OEM-Wireframe.png 1359w" alt="A preview of the first goal initiatives, actions and resources" class="image-2"></div>
+        </div><img src="../images/OEM-UI.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/OEM-UI-p-500.png 500w, ../images/OEM-UI-p-800.png 800w, ../images/OEM-UI-p-1080.png 1080w, ../images/OEM-UI-p-1600.png 1600w, ../images/OEM-UI-p-2000.png 2000w, ../images/OEM-UI.png 2223w" alt="A mockup of the final landing page" class="image-2">
       </div>
     </div>
     <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" alt="Left Arrow Icon" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px">
@@ -56,8 +55,8 @@
   </div>
   <div id="Footer" class="footer">
     <div class="footer-div">
-      <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
+      <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="100vw" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
